Api: Convert errorformat to use PARAM_HELP_MSG_PER_VALUE
Bug: T285545
Change-Id: I887a212f8e913e90e9adac4ad0b139e854fa3db2

--- a/includes/api/i18n/qqq.json
+++ b/includes/api/i18n/qqq.json
@@ -38,6 +38,12 @@
 	"apihelp-main-param-origin": "{{doc-apihelp-param|main|origin}}",
 	"apihelp-main-param-uselang": "{{doc-apihelp-param|main|uselang}}",
 	"apihelp-main-param-errorformat": "{{doc-apihelp-param|main|errorformat}}",
+	"apihelp-main-paramvalue-errorformat-plaintext": "{{doc-apihelp-paramvalue|main|errorformat|plaintext}}",
+	"apihelp-main-paramvalue-errorformat-wikitext": "{{doc-apihelp-paramvalue|main|errorformat|wikitext}}",
+	"apihelp-main-paramvalue-errorformat-html": "{{doc-apihelp-paramvalue|main|errorformat|html}}",
+	"apihelp-main-paramvalue-errorformat-raw": "{{doc-apihelp-paramvalue|main|errorformat|raw}}",
+	"apihelp-main-paramvalue-errorformat-none": "{{doc-apihelp-paramvalue|main|errorformat|none}}",
+	"apihelp-main-paramvalue-errorformat-bc": "{{doc-apihelp-paramvalue|main|errorformat|bc}}",
 	"apihelp-main-param-errorlang": "{{doc-apihelp-param|main|errorlang}}",
 	"apihelp-main-param-errorsuselocal": "{{doc-apihelp-param|main|errorsuselocal}}",
 	"apihelp-block-summary": "{{doc-apihelp-summary|block}}",
