Provide preference to make skins responsive
Bug: T285402
Change-Id: I4e567199a92c0492dac0561a5c7844f6c5c239e6

--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -1068,6 +1068,8 @@
 	"prefsnologintext2": "Please log in to change your preferences.",
 	"prefs-skin": "Skin",
 	"prefs-skin-prefs": "Skin preferences",
+	"prefs-skin-responsive": "Enable responsive mode",
+	"prefs-help-skin-responsive": "Adapt skin to available viewport area. (May have no effect on some skins).",
 	"skin-preview": "Preview",
 	"datedefault": "No preference",
 	"prefs-labs": "Labs features",
